# OAI_5G

./: CMakeLists.txt  nr-cuup-load-test.c
ci-scripts/: cls_containerize.py
ci-scripts/conf_files/: gnb.sa.band254.u0.25prb.rfsim.ntn.conf  gnb.sa.band78.273prb.rfsim.2x2.conf
ci-scripts/xml_files/: container_5g_rfsim_24prb.xml  container_5g_rfsim_2x2.xml
cmake_targets/: build_oai
cmake_targets/tools/: build_helper  install_wls_lib.patch
common/: CMakeLists.txt
common/utils/: CMakeLists.txt  tun_if.c
doc/: Doxyfile  ORAN_FHI7.2_Tutorial.md  SW_archi.md  analog_beamforming.md  handover-tutorial.md  nfapi.md  physical-simulators.md
doc/RRC/: rrc-dev.md
executables/: nr-gnb.c  nr-ru.c  nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h
nfapi/oai_integration/: nfapi_pnf.c  nfapi_vnf.c
openair1/PHY/: defs_RU.h  defs_nr_UE.h  defs_nr_common.h
openair1/PHY/CODING/nrLDPC_coding/nrLDPC_coding_segment/: CMakeLists.txt  nrLDPC_coding_segment_encoder_sequential_write.c
openair1/SCHED_NR/: fapi_nr_l1.c  nr_prach_procedures.c  phy_procedures_nr_gNB.c
openair1/SCHED_NR_UE/: fapi_nr_ue_l1.c  phy_procedures_nr_ue.c
openair1/SCHED_UE/: phy_procedures_lte_ue.c
openair2/COMMON/: e1ap_messages_types.h  f1ap_messages_types.h  gtpv1_u_messages_types.h  mac_messages_types.h  ngap_messages_def.h  ngap_messages_types.h  rrc_messages_types.h
openair2/E1AP/: e1ap.c
openair2/F1AP/: f1ap_cu_ue_context_management.c  f1ap_du_ue_context_management.c
openair2/GNB_APP/: MACRLC_nr_paramdef.h  gnb_app.c  gnb_config.c  gnb_paramdef.h
radio/: CMakeLists.txt
(+196 files in other folders)
